syntax = "proto2";

package sf.solana.block_meta.v1;

message PbInitRootLayout {
  required string admin = 1;
  required string operator = 2;
  required string alternateStaker = 3;
}

message PbSetOperatorLayout {
  required string newOperator = 1;
}

message PbSetAdminLayout {
  required string newAdmin = 1;
}

message PbSetAlternateStakerLayout {
  required string newAlternateStaker = 1;
}

message PbSplitLayout {
  required uint64 amount = 1;
}

message Arg {
  required string instruction_type = 1;
  optional PbInitRootLayout initRoot = 2;
  optional PbSetOperatorLayout setOperator = 3;
  optional PbSetAdminLayout setAdmin = 4;
  optional PbSetAlternateStakerLayout setAlternateStaker = 5;
  optional PbSplitLayout split = 6;
}

message InputAccounts {
  optional string root = 1;
  optional string admin = 2;
  optional string operator = 3;
  optional string destinationStake = 4;
  optional string sourceStake = 5;
  optional string staker = 6;
  optional string stakeHistory = 7;
  optional string clock = 8;
  optional string stakeProgram = 9;
  optional string stake = 10;
  optional string splitStake = 11;
  optional string systemProgram = 12;
  optional string validatorVote = 13;
  optional string stakeConfig = 14;
  optional string redelegateStake = 15;
  optional string alternateStaker = 16;
}

message Meta {
  required string block_date = 1;
  required int64 block_time = 2;
  required string tx_id = 3;
  required string dapp = 4;
  required uint64 block_slot = 5;
  required uint32 instruction_index = 7;
  required bool is_inner_instruction = 8;
  required uint32 inner_instruction_index = 9;
  required string instruction_type = 10;
  required Arg args = 11;
  required InputAccounts input_accounts = 12;
}

message Output {
  repeated Meta data = 1;
}